syntax = "proto3";

// optional = nullable
// may change in future!

// Type Identification
message ClassSimpleData {
    string namespaze = 1;
    string clazz = 2;
    repeated ClassSimpleData generics = 3;
}

message ProtoStructData {
    ClassSimpleData clazz = 1;

    map<int32, TypeInfoMsg> contents = 2;

}

message ProtoTypeInfo {
    enum Primitive {
        BOOLEAN = 0;
        CHAR = 1;
        INT = 2;
        LONG = 3;
        FLOAT = 4;
        DOUBLE = 5;
        STRING = 6;
        LIST = 7;
        ARRAY = 8;
    }
    oneof Info {
        Primitive primitiveInfo = 1;
        ProtoStructData structInfo = 2;
        ClassSimpleData classInfo = 3;
    }
}

// Type Details
message ProtoFieldInfo {
    string name = 1;
    uint64 id = 2;
    ProtoTypeInfo type = 3;
}

message ProtoPropertyInfo {
    string name = 1;
    bool hasGet = 2;
    uint64 getId = 3;
    bool hasSet = 4;
    uint64 setId = 5;
    ProtoTypeInfo type = 6;
}

message ProtoMethodInfo {
    string name = 1;
    uint64 id = 2;

    map<string, TypeInfoMsg> args = 3;
    ProtoTypeInfo returnType = 4;
}

/// Contains the class data in its entirety
// NOT APPLICABLE TO STRUCTS OR PRIMITIVES
message ProtoClassDetails {
    ClassSimpleData clazz = 1;

    repeated ProtoFieldInfo fields = 2;
    repeated ProtoPropertyInfo properties = 3;
    repeated ProtoMethodInfo methods = 4;
    
    repeated ClassSimpleData interfaces = 5; /* nullable */

    ProtoClassDetails parent = 6; /* nullable */
}

// Data Sending
message ProtoDataPayload {
    ProtoTypeInfo typeInfo = 1; /* nullable */

    bytes data = 2;
}

